# spec-kit

./: README.md  pyproject.toml
src/brainiac_cli/: __init__.py
templates/: vscode-settings.json
