[project]
name = "brainiac-cli"
version = "0.0.1"
description = "BrainIaC CLI, part of BrainIaC Framework. A tool to bootstrap your projects for Spec-Driven Infrastructure (SDI)."
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
brainiac = "brainiac_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brainiac_cli"]

